Add a title override to item part recipes and use it for sand casts